--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.profiles.active=dev
 
-server.port=8080
-server.tomcat.basedir=/data/tmp
+server.port=9003
+#server.tomcat.basedir=/data/tmp
 server.tomcat.max-threads=1000
 server.tomcat.max-connections=2000
 # server.context-path=/jump-gm
@@ -29,6 +29,13 @@ spring.redis.timeout=5000
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 mybatis.mapper-locations=classpath*:com/sulongfei/jump/mapper/*.xml
 mybatis.type-aliases-package=com.sulongfei.jump.model
+# mybatis 懒加载
+mybatis.configuration.lazy-loading-enabled=true
+mybatis.configuration.aggressive-lazy-loading=false
+# mybatis 二级缓存
+mybatis.configuration.cache-enabled=false
+# 启用redis管理session
+spring.session.store-type=redis
 
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
