--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,7 +35,7 @@ mybatis.configuration.aggressive-lazy-loading=false
 # mybatis 二级缓存
 mybatis.configuration.cache-enabled=false
 # 启用redis管理session
-spring.session.store-type=redis
+# spring.session.store-type=redis
 
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
