--- a/pom.xml
+++ b/pom.xml
@@ -144,10 +144,10 @@
             <version>1.2.10</version>
         </dependency>
         <!--spring session-->
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.session</groupId>
             <artifactId>spring-session-data-redis</artifactId>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>cn.hutool</groupId>
