--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 spring.profiles.active=dev
 
 server.port=9003
-#server.tomcat.basedir=/data/tmp
 server.tomcat.max-threads=1000
 server.tomcat.max-connections=2000
-# server.context-path=/jump-gm
+# server.context-path=/api
 
 # 下面为连接池的补充设置，应用到上面所有数据源中
 spring.datasource.initialSize=8
@@ -35,7 +34,7 @@ mybatis.configuration.aggressive-lazy-loading=false
 # mybatis 二级缓存
 mybatis.configuration.cache-enabled=false
 # 启用redis管理session
-# spring.session.store-type=redis
+spring.session.store-type=none
 
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
